# robest

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  robust_estim.hpp
docs/: conf.py  index.rst
docs/pages/: algorithms.rst  bibliography.rst  contact.rst  install.rst  introduction.rst  tutorial_line_fitting.rst  tutorial_new_model_fitting.rst  tutorials.rst
src/: robust_estim.hpp
tests/: test_CircleFitting.cpp  test_LineFitting.cpp  test_PlaneFitting.cpp  test_SphereFitting.cpp  test_iterEstimation.cpp
tests/CircleFitting/: CircleFitting.cpp  CircleFitting.hpp
tests/LineFitting/: LineFitting.cpp  LineFitting.hpp
tests/PlaneFitting/: PlaneFitting.cpp  PlaneFitting.hpp
tests/SphereFitting/: SphereFitting.cpp  SphereFitting.hpp
